# inout7-facial-recognition

./: .gitignore  README.md  app.py  college.db  database.db  database.py  predict.py  pyproject.toml
Training/: training.py
static/: dashboard.css
templates/: base.html  capture.html  dashboard.html  index.html  login.html  signup.html  upload.html
training/: model.sav  training.py
